--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						</header></div>
 				</article><article><img src="images/slide02.jpg" alt="" width="1440" height="961"><div class="inner">
 						<header><p>Lorem ipsum dolor sit amet nullam feugiat</p>
-							<h2>Magna</h2>
+							<h2>Vamsi</h2>
 						</header></div>
 				</article><article><img src="images/slide03.jpg" alt="" width="1440" height="962"><div class="inner">
 						<header><p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
